--- a/.github/workflows/hf_sync.yml
+++ b/.github/workflows/hf_sync.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push https://IsaacK:$HF_TOKEN@huggingface.co/spaces/IsaacK/synthetic-data-spaces main
+        run: git push --force https://IsaacK:$HF_TOKEN@huggingface.co/spaces/IsaacK/synthetic-data-spaces main
